clusters/talos-ottawa/apps/media/app/lidarr/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
      - name: lidarr
        image: lscr.io/linuxserver/lidarr:3.1.0
        ports:
        - name: http
          containerPort: 8686
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media-share
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: lidarr-config
      - name: media
        persistentVolumeClaim:
          claimName: media-share
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  selector:
    app: lidarr
  ports:
  - name: http
    port: 8686
    protocol: TCP
    targetPort: 8686
