clusters/talos-ottawa/apps/media/app/lidarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: media
  annotations:
    item.homer.rajsingh.info/name: "Lidarr"
    item.homer.rajsingh.info/subtitle: "Music Collection Manager"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/lidarr.svg"
    item.homer.rajsingh.info/keywords: "music, collection, automation"

    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-tv"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "lidarr.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: lidarr
          port: 8686
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
